# agent-prometheus-web-back

./: .env.example  .gitignore  WEB_BACKEND_IMPLEMENTATION_PLAN.md  docker-compose.yml  init_database.sql  pyproject.toml
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  chat.py  dashboard.py  documents.py  health.py  logs.py  me.py  monitoring.py  plugin_history.py  repositories.py  settings.py
app/core/: config.py  database.py  keycloak.py  logging.py
app/llm/: __init__.py  claude.py  factory.py  fallback.py  gemini.py  llm_provider.py  openai.py  vllm.py
app/schemas/: auth.py  chat.py  common.py  dashboard.py  documents.py  logs.py  monitoring.py  plugin_history.py  repositories.py  settings.py
app/services/: bridge_status_service.py  chat_service.py  dashboard_service.py  document_service.py  log_service.py  monitoring_service.py  plugin_history_service.py  repository_service.py  settings_service.py  user_service.py
keycloak/: agent-pmts-realm.json
tests/: test_auth.py  test_chat.py  test_dashboard.py  test_database_health.py  test_documents.py  test_health.py  test_logs.py  test_me.py  test_monitoring_settings.py  test_plugin_history.py  test_repositories.py
